# tkhwang-book-lecture-coding

./: .gitignore  README.md
ai/blog-langchain-plan-execute/: .env.example  package.json  pnpm-lock.yaml
ai/book-ai-agents-in-action/: main.py  pyproject.toml  the_best_joke.md
ai/book-do-it-ai-agent/: .gitignore  main.py  pyproject.toml
ai/book-do-it-ai-agent/chat03/: no-prompting.py
ai/book-do-it-ai-agent/chat04/: pdf-to-txt.py  pdf-without-header-footer.py  summary-text.py
ai/book-do-it-ai-agent/chat04/data/: 1706.03762v7.txt
ai/book-do-it-ai-agent/chat04/output/: 1706.03762v7.txt  summary.txt
ai/book-do-it-ai-agent/chat06/: image-explanation-local-image.py  image-explanation.py
ai/book-do-it-ai-agent/chat07/: time.py
ai/book-do-it-ai-agent/chat08/: langchain-chatbot.py  langchain-too.ipynb  langchain-tool.py  langchain_tool_stream.ipynb  lcel.py  pydantic.ipynb
ai/book-do-it-ai-agent/chat09/: rag-practice.ipynb
ai/book-do-it-ai-agent/chat10/: duckduckgo.ipynb
ai/book-do-it-ai-agent/chat12/: langgraph-memoy.py  langgraph-simple-chatbot.py  langgraph-tools.ipynb
ai/book-do-it-ai-agent/chat13/: rag-with-langgraph.ipynb
ai/book-jocoding-web-service-using-chat-gpt-api/: .gitignore  index.js  package-lock.json  package.json
ai/book-learning-langchain/: .prettierignore  jsconfig.json  package-lock.json  package.json
ai/book-teddy-rag-basic/: chater02.ipynb  requirements.txt
ai/book-yozm-ai-agent/: pyproject.toml
ai/book-yozm-ai-agent/chat03/: hellow_langchain.py  langchain-messages.py
ai/lecture-fullstack-gpt/: .env.example  .gitignore  notebook.ipynb  requirements.txt
ai/workshop-mastra-meme-generator/: package-lock.json  package.json
algorithms/book-js-data-structures-and-algorithms/: README.md
algorithms/book-the-recursive-book-of-recursion/: READMD.md
devops/book-learn-docker-in-a-month-of-lunches/: README.md
devops/book-serverless-aws-lambda/: README.md
express.js/wetubee-nomadcoder/: .gitignore
frontend/nomad-reactjs-for-novice/: .env  package.json
frontend/wetubee-nomadcoder/: package.json
fullstack/nomadcoder-nuber-server/: package.json  tsconfig.json  tslint.json
java-kotlin/: README.md
java-kotlin/book-quick-start-spring-boot/: README.md
java-kotlin/lecture-inflearn-data-jpa/: build.gradle  settings.gradle
js-ts/: README.md
(+661 files in other folders)
