[project]
name = "yozm-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "chromadb>=0.6.3",
    "duckduckgo-search>=8.0.2",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "geopy>=2.4.1",
    "google-adk>=1.2.0",
    "langchain-community>=0.3.27",
    "langchain[openai]>=0.3.27",
    "langchain[anthropic]>=0.3.27",
    "numpy>=2.2.6",
    "openai>=1.70.0",
    "openai-agents>=0.2.5",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "rich>=14.0.0",
    "tenacity>=8.2.3",
    "tiktoken>=0.9.0",
    "unstructured>=0.17.2",
    "uvicorn>=0.34.2",
    "google-adk>=1.2.1",
    "geopy>=2.4.1",
    "litellm>=1.72.1",
    "langgraph>=0.4.8",
    "grandalf>=0.8",
    "fastmcp>=2.8.1",
    "a2a-sdk>=0.3.0",
    "feedparser>=6.0.11",
    "schedule>=1.2.2",
    "langgraph-supervisor>=0.0.27",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.13.4",
    "py3langid>=0.3.0",
    "langchain-mcp-adapters>=0.1.9",
    "mcp[cli]>=1.9.4",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
    "notebook>=7.3.3",
    "pytest>=8.4.1",
]
